Deployemnt error solving in project

--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,9 @@ services:
   - type: web
     name: ai-poem-generator-backend
     runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    buildCommand: >
+      mkdir -p /tmp/.cargo /tmp/.rustup && export CARGO_HOME=/tmp/.cargo && export RUSTUP_HOME=/tmp/.rustup && pip install --upgrade pip setuptools wheel && pip install --prefer-binary --no-cache-dir -r requirements.txt
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT --workers 1
     plan: free
     envVars:
       - key: ENV
@@ -12,5 +13,9 @@ services:
         value: 0.0.0.0
       - key: FRONTEND_URL
         value: https://your-frontend-domain.onrender.com
+      - key: CARGO_HOME
+        value: /tmp/.cargo
+      - key: RUSTUP_HOME
+        value: /tmp/.rustup
     healthCheckPath: /health
     autoDeploy: true
